--- a/shufl-web/src/app/components/shared/track-list-item/track-list-item.component.html
+++ b/shufl-web/src/app/components/shared/track-list-item/track-list-item.component.html
@@ -1,7 +1,11 @@
 <div class="track">
     <div class="track-number"><p>{{ trackNumber }}</p></div>
     <div class="track-name"><p>{{ trackName }}</p></div>
-    <div class="artists-container"><a *ngFor="let artist of trackArtists" class="artist-link" href="/artist/{{ artist.id }}">{{ artist.name }}</a></div>
+    <div class="artists-container">
+        <div class="artists-links-container">
+            <a *ngFor="let artist of trackArtists" class="artist-link" href="/artist/{{ artist.id }}">{{ artist.name }}</a>
+        </div>
+    </div>
     <div class="track-duration"><p>{{ trackDuration | date: 'mm:ss' }}</p></div>
     <a class="button" href="{{ trackUrl }}" target="new"><img src="assets/img/spotify-logo.png"><p>Open</p></a>
 </div>
