--- a/shufl-web/src/app/components/home/home.component.scss
+++ b/shufl-web/src/app/components/home/home.component.scss
@@ -1,9 +1,11 @@
-.card {
+.card-container {
     height: 320px;
 
-    background-color: transparent;
-
     top: calc(50% - 160px);
-
-    display: block;
+    
+    .card {
+        background-color: transparent;
+    
+        display: block;
+    }
 }
