--- a/shufl-web/src/app/components/album/album.component.scss
+++ b/shufl-web/src/app/components/album/album.component.scss
@@ -1,11 +1,13 @@
 @import 'src/assets/scss/variables/colours';
 
 .card-container {
+    top: 5%;
+
     .card {
         padding: 15px;
-        margin-bottom: 25px;
-    
-        top: 5%;
+        margin-bottom: 5%;
+
+        position: relative;
     
         opacity: 0;
     
@@ -101,46 +103,36 @@
 
 @media (min-width: 765px) and (max-width: 1024px) {
     .card-container {
-        .card {
-            left: 15%;
-            right: 15%;
-        }
+        left: 15%;
+        right: 15%;
     }
 }
 
 @media (min-width: 1024px) and (max-width: 1365px) {
     .card-container {
-        .card {
-            left: 17.5%;
-            right: 17.5%;
-        }
+        left: 17.5%;
+        right: 17.5%;
     }
 }
 
 @media (min-width: 1365px) and (max-width: 1920px) {
     .card-container {
-        .card {
-            left: 25%;
-            right: 25%;
-        }
+        left: 25%;
+        right: 25%;
     }
 }
 
 @media (min-width: 1920px) and (max-width: 2560px) {
     .card-container {
-        .card {
-            left: 30%;
-            right: 30%;
-        }
+        left: 30%;
+        right: 30%;
     }
 }
 
 @media (min-width: 2560px) {
     .card-container {
-        .card {
-            left: 30%;
-            right: 30%;
-        }
+        left: 30%;
+        right: 30%;
     }
     
 }
