--- a/shufl-web/src/app/components/shared/track-list/track-list-item/track-list-item.component.scss
+++ b/shufl-web/src/app/components/shared/track-list/track-list-item/track-list-item.component.scss
@@ -62,6 +62,7 @@
         overflow: hidden;
 
         .artists-links-container {
+            min-width: 100%;
             width: fit-content;
             height: 100%;
 
