--- a/shufl-web/src/styles.scss
+++ b/shufl-web/src/styles.scss
@@ -15,14 +15,18 @@ body {
 
     font-family: Arial, Helvetica, sans-serif;
 
-    .card {
-        background-color: $primary-background-colour;
-
+    .card-container {
         position: absolute;
         left: 5%;
         right: 5%;
 
-        border-radius: $primary-border-radius;
+        .card {
+            width: 100%;
+
+            background-color: $primary-background-colour;
+
+            border-radius: $primary-border-radius;
+        }
     }
 
     .button {
@@ -50,7 +54,7 @@ body {
 
 @media (min-width: 475px) and (max-width: 765px) {
     body {
-        .card {
+        .card-container {
             left: 10%;
             right: 10%;
         }
@@ -59,7 +63,7 @@ body {
 
 @media (min-width: 765px) and (max-width: 1024px) {
     body {
-        .card {
+        .card-container {
             left: 20%;
             right: 20%;
         }
@@ -68,7 +72,7 @@ body {
 
 @media (min-width: 1024px) and (max-width: 1365px) {
     body {
-        .card {
+        .card-container {
             left: 30%;
             right: 30%;
         }
@@ -77,7 +81,7 @@ body {
 
 @media (min-width: 1365px) and (max-width: 1920px) {
     body {
-        .card {
+        .card-container {
             left: 35%;
             right: 35%;
         }
@@ -86,7 +90,7 @@ body {
 
 @media (min-width: 1920px) and (max-width: 2560px) {
     body {
-        .card {
+        .card-container {
             left: 38%;
             right: 38%;
         }
@@ -95,7 +99,7 @@ body {
 
 @media (min-width: 2560px) {
     body {
-        .card {
+        .card-container {
             left: 42%;
             right: 42%;
         }
