--- a/shufl-web/src/app/components/shared/track-list/track-list.component.html
+++ b/shufl-web/src/app/components/shared/track-list/track-list.component.html
@@ -5,6 +5,5 @@
     [trackName]="track.name"
     [trackArtists]="track.artists"
     [trackDuration]="track.duration"
-    [trackUrl]="track.url"
-    [ngClass]="{'last-child': last}"></app-track-list-item>
+    [trackUrl]="track.url"></app-track-list-item>
 </div>
