--- a/shufl-web/src/app/components/shared/track-list/track-list-item/track-list-item.component.scss
+++ b/shufl-web/src/app/components/shared/track-list/track-list-item/track-list-item.component.scss
@@ -1,4 +1,4 @@
-@import 'src/assets/scss/variables/colours';
+@import "src/assets/scss/variables/colours";
 
 .track {
     height: 45px;
@@ -49,9 +49,9 @@
     }
 
     .artists-container {
-        width: 0px;
+        width: 0;
 
-        padding: 0px;
+        padding: 0;
         margin-left: 5px;
         margin-right: 5px;
 
@@ -72,7 +72,7 @@
             position: absolute;
 
             display: flex;
-    
+
             overflow: hidden;
 
             white-space: nowrap;
@@ -87,26 +87,26 @@
 
             .artist-link {
                 min-width: fit-content;
-    
+
                 color: $tertiary-foreground-colour;
-    
+
                 text-decoration: none;
-    
+
                 overflow: hidden;
                 text-overflow: ellipsis;
-        
+
                 &:not(:last-child)::after {
                     content: ", ";
                     margin-right: 3px;
                 }
-        
+
                 &:hover {
                     text-decoration: underline;
                 }
             }
         }
 
-        @-webkit-keyframes scrolling { 
+        @-webkit-keyframes scrolling {
             0% {
                 transform: translateX(0%);
                 left: 0%;
@@ -118,7 +118,7 @@
             }
         }
 
-        @keyframes scrolling { 
+        @keyframes scrolling {
             0% {
                 transform: translateX(0%);
                 left: 0%;
@@ -146,7 +146,7 @@
         height: 30px;
 
         padding: 5px;
-        margin-bottom: 0px;
+        margin-bottom: 0;
 
         display: flex;
 
@@ -175,7 +175,7 @@
         }
 
         .button {
-            width: 20%
+            width: 20%;
         }
     }
 }
@@ -198,7 +198,7 @@
         }
 
         .button {
-            width: 10%
+            width: 10%;
         }
     }
 }
@@ -221,7 +221,7 @@
         }
 
         .button {
-            width: 10%
+            width: 10%;
         }
     }
 }
