--- a/shufl-web/src/app/components/shared/track-list/track-list-item/track-list-item.component.scss
+++ b/shufl-web/src/app/components/shared/track-list/track-list-item/track-list-item.component.scss
@@ -61,73 +61,14 @@
 
         overflow: hidden;
 
-        .artists-links-container {
-            min-width: 100%;
-            width: fit-content;
+        .inline-artists-ticker {
+            width: 100%;
             height: 100%;
 
             margin: 0;
             padding: 0;
 
-            position: absolute;
-
-            display: flex;
-
             overflow: hidden;
-
-            white-space: nowrap;
-
-            &:hover {
-                -webkit-animation: scrolling 1s linear forwards;
-                -moz-animation: scrolling 1s linear forwards;
-                -ms-animation: scrolling 1s linear forwards;
-                -o-animation: scrolling 1s linear forwards;
-                animation: scrolling 1s linear forwards;
-            }
-
-            .artist-link {
-                min-width: fit-content;
-
-                color: $tertiary-foreground-colour;
-
-                text-decoration: none;
-
-                overflow: hidden;
-                text-overflow: ellipsis;
-
-                &:not(:last-child)::after {
-                    content: ", ";
-                    margin-right: 3px;
-                }
-
-                &:hover {
-                    text-decoration: underline;
-                }
-            }
-        }
-
-        @-webkit-keyframes scrolling {
-            0% {
-                transform: translateX(0%);
-                left: 0%;
-            }
-
-            100% {
-                transform: translateX(-100%);
-                left: 100%;
-            }
-        }
-
-        @keyframes scrolling {
-            0% {
-                transform: translateX(0%);
-                left: 0%;
-            }
-
-            100% {
-                transform: translateX(-100%);
-                left: 100%;
-            }
         }
     }
 
