--- a/shufl-web/src/app/components/artist/artist.component.scss
+++ b/shufl-web/src/app/components/artist/artist.component.scss
@@ -1,3 +1,92 @@
 .card-container {
-    width: 100%;
+    top: 5%;
+
+    .card {
+        padding: 15px;
+        margin-bottom: 5%;
+
+        opacity: 0;
+
+        -webkit-transition: opacity 0.5s ease-in-out;
+        -moz-transition: opacity 0.5s ease-in-out;
+        transition: opacity 0.5s ease-in-out;
+
+        &.loaded {
+            opacity: 1;
+        }
+
+        .artist-info-container {
+            .artist-image {
+                width: fit-content;
+
+                margin: auto;
+
+                border-radius: 50%;
+
+                overflow: hidden;
+            }
+
+            .genres-container {
+                .genre-label {
+                    margin-top: 0;
+                }
+            }
+        }
+
+        .artist-album-list-container {
+            display: flex;
+            flex-wrap: wrap;
+
+            .artist-album {
+                width: 100%;
+            }
+        }
+    }
+}
+
+@media (min-width: 765px) and (max-width: 1024px) {
+    .card-container {
+        left: 15%;
+        right: 15%;
+    }
+}
+
+@media (min-width: 1024px) and (max-width: 1365px) {
+    .card-container {
+        left: 17.5%;
+        right: 17.5%;
+    }
+}
+
+@media (min-width: 1365px) and (max-width: 1920px) {
+    .card-container {
+        left: 25%;
+        right: 25%;
+    }
+}
+
+@media (min-width: 1800px) {
+    .card-container {
+        .card {
+            .artist-album-list-container {
+                .artist-album {
+                    width: 50%;
+                }
+            }
+        }
+    }
+}
+
+@media (min-width: 1920px) and (max-width: 2560px) {
+    .card-container {
+        left: 30%;
+        right: 30%;
+    }
+}
+
+@media (min-width: 2560px) {
+    .card-container {
+        left: 30%;
+        right: 30%;
+    }
 }
