--- a/shufl-web/src/styles.scss
+++ b/shufl-web/src/styles.scss
@@ -28,6 +28,90 @@ body {
             background-color: $primary-background-colour;
 
             border-radius: $primary-border-radius;
+
+            .album-info-container,
+            .artist-info-container {
+                .album-cover,
+                .artist-image {
+                    display: flex;
+
+                    img {
+                        width: 250px;
+                        height: 250px;
+
+                        margin: auto;
+                    }
+                }
+
+                h2,
+                h3,
+                p {
+                    text-align: center;
+                }
+
+                .artists-container,
+                .genres-container {
+                    display: flex;
+
+                    justify-content: center;
+
+                    .artist-link,
+                    .genre-label {
+                        color: $tertiary-foreground-colour;
+
+                        text-decoration: none;
+
+                        &:not(:last-child)::after {
+                            content: ", ";
+                            margin-right: 3px;
+                        }
+                    }
+
+                    .artist-link {
+                        &.disabled {
+                            cursor: default;
+
+                            pointer-events: none;
+                        }
+
+                        &:not(.disabled):hover {
+                            text-decoration: underline;
+                        }
+                    }
+
+                    .genre-label {
+                        margin-top: 15px;
+                        margin-bottom: 0;
+                    }
+                }
+
+                .button {
+                    width: 60%;
+                    height: 50px;
+
+                    padding: 10px;
+                    margin: auto;
+                    margin-bottom: 25px;
+
+                    display: flex;
+
+                    text-decoration: none;
+
+                    img {
+                        width: 40px;
+                        height: 40px;
+
+                        margin-top: 5px;
+                        margin-right: -40px;
+                    }
+
+                    p {
+                        margin: auto;
+
+                        font-size: 2em;
+                    }
+                }
+            }
         }
     }
 
