--- a/shufl-web/src/assets/scss/variables/colours.scss
+++ b/shufl-web/src/assets/scss/variables/colours.scss
@@ -2,9 +2,16 @@ $background-gradient-primary-colour: #112d5f;
 $background-gradient-secondary-colour: #8413e0;
 
 $primary-background-colour: #393e46;
-$primary-background-colour-hover: #2e3238;
+$primary-background-colour-hover: darken($primary-background-colour, 5%);
+
+$secondary-foreground-colour: #355c7d;
+$secondary-foreground-colour-hover: darken($secondary-foreground-colour, 10%);
+
+$tertiary-background-colour: #2c3035;
+$tertiary-background-colour-hover: darken($tertiary-background-colour, 5%);
 
 $primary-foreground-colour: #d9d9da;
-$secondary-foreground-colour: #355c7d;
-$secondary-foreground-colour-hover: #1f3c54;
+
 $tertiary-foreground-colour: #adadad;
+
+$nav-bar-foreground-colour-active: #459deb;
