--- a/shufl-web/src/app/components/shared/track-list/track-list-item/track-list-item.component.html
+++ b/shufl-web/src/app/components/shared/track-list/track-list-item/track-list-item.component.html
@@ -1,9 +1,22 @@
 <div class="track">
-    <div class="track-number"><p>{{ trackNumber }}</p></div>
-    <div class="track-name"><p>{{ trackName }}</p></div>
+    <div class="track-number">
+        <p>{{ trackNumber }}</p>
+    </div>
+
+    <div class="track-name">
+        <p>{{ trackName }}</p>
+    </div>
+
     <div class="artists-container">
         <div app-inline-artists-ticker class="inline-artists-ticker" [artists]="trackArtists"></div>
     </div>
-    <div class="track-duration"><p>{{ trackDuration | date: 'mm:ss' }}</p></div>
-    <a class="button" href="{{ trackUrl }}" target="new"><img src="assets/img/spotify-logo.png"><p>Open</p></a>
+
+    <div class="track-duration">
+        <p>{{ trackDuration | date: 'mm:ss' }}</p>
+    </div>
+
+    <a class="button" href="{{ trackUrl }}" target="new">
+        <img src="assets/img/spotify-logo.png">
+        <p>Open</p>
+    </a>
 </div>
