Bug fixes & PWA Setup (#6)
* Fixed navigation bugs

* Added logo and PWA

* Update index.html

* Lighthouse fixes

* Minor updates

* Refactored loading icon to only be used once

* Minor fixes

* Codacy Fixes

--- a/shufl-web/src/app/components/album/album.component.html
+++ b/shufl-web/src/app/components/album/album.component.html
@@ -6,14 +6,14 @@
             </div>
             <h2>{{ albumData.name }}</h2>
             <div class="artists-container">
-                <a *ngFor="let artist of albumData.artists" class="artist-link" href="/artist/{{ artist.id }}"
+                <a *ngFor="let artist of albumData.artists" class="artist-link" [routerLink]="['/artist', artist.id]"
                     [ngClass]="{'disabled': artist.id == VARIOUS_ARTISTS_CONST}">{{ artist.name }}</a>
             </div>
             <div class="genres-container">
                 <p *ngFor="let genre of genres" class="genre-label">{{ genre | genreFormatter }}</p>
             </div>
             <p>{{ albumData.releaseDate | date: 'MMMM yyyy' }}</p>
-            <a class="button" href="{{ albumData.url }}" target="new"><img src="assets/img/spotify-logo.png">
+            <a class="button" href="{{ albumData.url }}" target="new"><img src="assets/img/logos/spotify-logo.png">
                 <p>Open</p>
             </a>
         </div>
@@ -22,5 +22,3 @@
         </div>
     </div>
 </div>
-
-<app-loading-icon [hidden]="dataLoaded"></app-loading-icon>
