--- a/shufl-web/src/app/components/shared/nav-bar/nav-bar-item/nav-bar-item.component.scss
+++ b/shufl-web/src/app/components/shared/nav-bar/nav-bar-item/nav-bar-item.component.scss
@@ -8,14 +8,23 @@ $nav-bar-icon-margin-top: 8px;
 
     margin-top: $nav-bar-icon-margin-top;
 
-    cursor: pointer;
-
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
     user-select: none;
+
+    -webkit-tap-highlight-color: transparent;
+
+    cursor: pointer;
 
     &.active {
         .icon {
             svg {
                 fill: $primary-foreground-colour;
+
+                overflow: visible;
 
                 path {
                     stroke: $primary-foreground-colour;
@@ -63,6 +72,8 @@ $nav-bar-icon-margin-top: 8px;
         margin-top: 0;
         padding: 5px 0;
 
+        position: relative;
+
         display: flex;
         align-items: center;
 
@@ -73,11 +84,18 @@ $nav-bar-icon-margin-top: 8px;
 
                 background-color: $secondary-foreground-colour;
 
+                position: absolute;
+
                 content: "";
             }
 
             .icon {
-                margin-left: 15px;
+                margin-left: 17px;
+                margin-right: 18px;
+
+                svg {
+                    transform: scale(0.95);
+                }
             }
 
             .title {
