--- a/shufl-web/src/styles.scss
+++ b/shufl-web/src/styles.scss
@@ -8,16 +8,16 @@ html {
 body {
     height: 100%;
 
-    background-image: radial-gradient(
-        circle,
-        $background-gradient-primary-colour 0%,
-        $background-gradient-secondary-colour 75%
-    );
     color: $primary-foreground-colour;
 
     margin: 0;
 
     font-family: Arial, Helvetica, sans-serif;
+
+    .app-icon {
+        background-image: url("assets/img/logos/app/logo.png");
+        background-size: cover;
+    }
 
     .button {
         color: $primary-foreground-colour;
@@ -49,6 +49,8 @@ body {
         position: absolute;
         left: 5%;
         right: 5%;
+
+        z-index: 1;
 
         .card {
             background-color: $primary-background-colour;
