--- a/shufl-web/src/app/app.component.html
+++ b/shufl-web/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="app-stage">
     <div class="stage">
         <router-outlet></router-outlet>
+        <app-loading-icon></app-loading-icon>
     </div>
     <div class="nav-bar-container">
         <app-nav-bar></app-nav-bar>
