--- a/shufl-web/src/app/components/shared/album-icon/album-icon.component.html
+++ b/shufl-web/src/app/components/shared/album-icon/album-icon.component.html
@@ -1,9 +1,9 @@
-<div class="album-icon-container">
+<div class="album-icon-container" (click)="albumIconClicked()">
     <div class="album-art">
         <img src="{{ album.coverArtUrl }}">
     </div>
     <div class="album-info">
-        <a class="album-link" href="album/{{ album.id }}">{{ album.name }}</a>
+        <a class="album-link" [routerLink]="['/album', album.id]">{{ album.name }}</a>
         <div class="artist-links">
             <div app-inline-artists-ticker class="artist-links-container" [artists]="album.artists"></div>
         </div>
