--- a/shufl-web/src/app/components/shared/icon-button/icon-button.component.html
+++ b/shufl-web/src/app/components/shared/icon-button/icon-button.component.html
@@ -1,4 +1,4 @@
 <div class="button">
-    <img class="icon" src="{{ buttonIconSource }}">
+    <img class="icon" src="{{ buttonIconSource }}" alt="{{ buttonText }}">
     <span class="text">{{ buttonText }}</span>
 </div>
