--- a/shufl-web/src/app/components/shared/loading-icon/loading-icon.component.html
+++ b/shufl-web/src/app/components/shared/loading-icon/loading-icon.component.html
@@ -1,3 +1,3 @@
-<div class="loading-icon-container" [ngClass]="{'hidden': hidden}">
+<div class="loading-icon-container" [ngClass]="{'visible': visible}">
     <img src="/assets/svg/loading.svg">
 </div>
