--- a/shufl-web/src/app/components/shared/loading-icon/loading-icon.component.scss
+++ b/shufl-web/src/app/components/shared/loading-icon/loading-icon.component.scss
@@ -5,15 +5,15 @@
     position: absolute;
     left: calc(50% - 100px);
     top: calc(50% - 100px);
-    z-index: -9999;
+    z-index: 0;
 
-    opacity: 1;
+    opacity: 0;
 
     -webkit-transition: opacity 0.25s ease-in-out;
     -moz-transition: opacity 0.25s ease-in-out;
     transition: opacity 0.25s ease-in-out;
 
-    &.hidden {
-        opacity: 0;
+    &.visible {
+        opacity: 1;
     }
 }
