--- a/shufl-web/src/app/components/shared/nav-bar/nav-bar.component.html
+++ b/shufl-web/src/app/components/shared/nav-bar/nav-bar.component.html
@@ -1,4 +1,5 @@
 <div class="nav-bar">
+    <div class="app-icon"></div>
     <app-nav-bar-item [itemData]="homeItem" [active]="homeActive"></app-nav-bar-item>
     <app-nav-bar-item [itemData]="searchItem" [active]="searchActive"></app-nav-bar-item>
     <app-nav-bar-item [itemData]="groupsItem" [active]="groupsActive"></app-nav-bar-item>
