Setup Groups prototype (#7)
* Setup Groups components

* Fixed margins

* Finished Groups prototype

* Codacy Fixes

* Update album-icon.component.scss

--- a/shufl-web/src/app/components/shared/album-icon/album-icon.component.scss
+++ b/shufl-web/src/app/components/shared/album-icon/album-icon.component.scss
@@ -12,6 +12,9 @@
     }
 
     .album-art {
+        width: 150px;
+        height: 150px;
+
         img {
             width: 150px;
             height: 150px;
