--- a/shufl-web/src/assets/scss/wide-container.scss
+++ b/shufl-web/src/assets/scss/wide-container.scss
@@ -1,5 +1,22 @@
 .card-container {
     top: 5%;
+
+    .card {
+        padding: 15px;
+        margin-bottom: 5%;
+
+        position: relative;
+
+        opacity: 0;
+
+        -webkit-transition: opacity 0.5s ease-in-out;
+        -moz-transition: opacity 0.5s ease-in-out;
+        transition: opacity 0.5s ease-in-out;
+
+        &.loaded {
+            opacity: 1;
+        }
+    }
 }
 
 @media (min-width: 765px) and (max-width: 1024px) {
