--- a/shufl-web/src/app/components/album/album.component.html
+++ b/shufl-web/src/app/components/album/album.component.html
@@ -12,7 +12,7 @@
             <div class="genres-container">
                 <p *ngFor="let genre of genres" class="genre-label">{{ genre | genreFormatter }}</p>
             </div>
-            <p>{{ albumData.releaseDate | date: 'MMMM yyyy' }}</p>
+            <p class="release-date">{{ albumData.releaseDate | date: 'MMMM yyyy' }}</p>
             <a class="button" href="{{ albumData.url }}" target="new"><img src="assets/img/logos/spotify-logo.png">
                 <p>Open</p>
             </a>
