--- a/shufl-web/src/assets/scss/variables/dimensions.scss
+++ b/shufl-web/src/assets/scss/variables/dimensions.scss
@@ -1,6 +1,7 @@
 @import "colours";
 
 $primary-border-radius: 5px;
+$secondary-border-radius: 3px;
 
 $list-item-height: 45px;
 $list-item-padding: 5px;
@@ -10,3 +11,5 @@ $nav-bar-height: 60px;
 $nav-bar-width: 20%;
 $nav-bar-width-desktop: 375px;
 $nav-bar-tablet-breakpoint: 1025px;
+
+$status-checker-dimensions: 25px;
