--- a/shufl-web/src/app/components/shared/user/login/login.component.html
+++ b/shufl-web/src/app/components/shared/user/login/login.component.html
@@ -26,6 +26,6 @@
         </form>
         <p class="form-error" [ngClass]="{'visible': formErrorMessageVisible}">{{ formErrorMessage }}</p>
         <a class="form-link" [routerLink]="['/register']">Don't have an Account? Register</a>
-        <a class="form-link" [routerLink]="['/password-reset']">Forgot your password? Reset</a>
+        <a class="form-link" [routerLink]="['/account/password-reset']">Forgot your password? Reset</a>
     </div>
 </div>
