--- a/shufl-web/src/app/components/group/group-item-details/group-item-user-rating-list/group-item-user-rating-list.component.scss
+++ b/shufl-web/src/app/components/group/group-item-details/group-item-user-rating-list/group-item-user-rating-list.component.scss
@@ -1,9 +1,20 @@
 .group-item-user-rating-list-container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 
     .ratings-left,
     .ratings-right {
-        width: 50%;
+        width: 100%;
+    }
+}
+
+@media (min-width: 1920px) {
+    .group-item-user-rating-list-container {
+        flex-direction: row;
+
+        .ratings-left,
+        .ratings-right {
+            width: 50%;
+        }
     }
 }
