--- a/shufl-web/src/app/components/group/group-item-details/group-item-details.component.html
+++ b/shufl-web/src/app/components/group/group-item-details/group-item-details.component.html
@@ -1,4 +1,4 @@
-<div class="card-container">
+<div class="card-container group-item-details-card-container">
     <div class="card" [ngClass]="{ 'loaded': dataLoaded }">
         <div class="group-item-info-container">
             <div class="album-container">
