--- a/shufl-web/src/app/components/group/group-item-list/group-item/group-item.component.scss
+++ b/shufl-web/src/app/components/group/group-item-list/group-item/group-item.component.scss
@@ -8,11 +8,7 @@ $date-header-height: calc(18px + #{$date-header-padding-top});
 
 $group-item-data-container-height: 185px;
 
-$group-item-container-height: calc(#{$date-header-height} + #{$group-item-data-container-height});
-
 .group-item-container {
-    height: $group-item-container-height;
-
     padding: $group-item-container-padding;
 
     border-bottom: 2px solid $tertiary-foreground-colour;
@@ -45,10 +41,24 @@ $group-item-container-height: calc(#{$date-header-height} + #{$group-item-data-c
 
     .group-item-data-container {
         display: flex;
+        flex-direction: column;
 
         .album-container,
         .rating-container {
-            width: 50%;
+            width: 100%;
+        }
+    }
+}
+
+@media (min-width: 1367px) {
+    .group-item-container {
+        .group-item-data-container {
+            flex-direction: row;
+
+            .album-container,
+            .rating-container {
+                width: 50%;
+            }
         }
     }
 }
