--- a/shufl-web/src/app/components/shared/group-item-rating/group-item-rating.component.scss
+++ b/shufl-web/src/app/components/shared/group-item-rating/group-item-rating.component.scss
@@ -3,6 +3,7 @@
 $padding: 15px;
 
 .rating-container {
+    width: 100%;
     height: calc(100% - (#{$padding} * 2));
 
     padding: $padding 0 $padding 0;
@@ -19,7 +20,7 @@ $padding: 15px;
     }
 
     .category-ratings-container {
-        width: 80%;
+        width: 100%;
 
         margin: auto;
 
@@ -44,6 +45,18 @@ $padding: 15px;
 
             .rating {
                 margin-left: auto;
+            }
+        }
+    }
+}
+
+@media (max-width: 765px) {
+    .rating-container.embedded {
+        .category-ratings-container {
+            flex-direction: column;
+
+            .category-rating {
+                width: 100%;
             }
         }
     }
