--- a/shufl-web/src/app/components/shared/user/verify/verify.component.html
+++ b/shufl-web/src/app/components/shared/user/verify/verify.component.html
@@ -1,2 +1,41 @@
-<h1 class="verified-title" [ngClass]="{'visible': isLoaded}">Verified</h1>
-<h1 class="verified-error" [ngClass]="{'visible': isError}">ERROR</h1>
+<div class="user-form-card" *ngIf="isRequesting">
+    <div class="user-form-container">
+        <div class="verification-request-form-container" *ngIf="!verificationRequestSentSuccessfully">
+            <form #verificationRequestForm="ngForm" (ngSubmit)="verificationRequestAsync(verificationRequestForm.value)">
+                <div class="form-group" [ngClass]="{'active': emailActive, 'populated': emailPopulated, 'has-error': (!email.valid && email.touched)}">
+                    <div class="input-container">
+                        <label for="email">Email</label>
+                        <input type="email" class="form-control" id="email" #email="ngModel" name="email" required minlength="4" 
+                            (focus)="changeInputState(email, true)"
+                            (blur)="changeInputState(email, false)"
+                            (ngModelChange)="emailChanged(email.value)" ngModel email>
+                    </div>
+                    <small class="warning-label" [ngClass]="{'visible': !email.valid && email.touched}">{{ emailErrorMessage }}</small>
+                </div>
+    
+                <app-loading-button [buttonText]="'Request New Verifcation Link'" [isLoading]="isLoading" [isDisabled]="!verificationRequestForm.valid"></app-loading-button>
+            </form>
+            <p class="form-error" [ngClass]="{'visible': formErrorMessageVisible}">{{ formErrorMessage }}</p>
+        </div>
+        <div class="message-container positive-message" *ngIf="verificationRequestSentSuccessfully">
+            <div class="check-icon icon"></div>
+            <h2>An email has been sent to the provided email address</h2>
+        </div>
+    </div>
+</div>
+
+<div class="user-form-card" *ngIf="!isRequesting">
+    <div class="user-form-container">
+        <div class="message-container positive-message" *ngIf="verificationAttempted && verifiedSuccessfully">
+            <div class="check-icon icon"></div>
+            <h2>Your account has been verified, you will now be directed to the home page</h2>
+        </div>
+        
+        <div class="message-container negative-message" *ngIf="verificationAttempted && !verifiedSuccessfully">
+            <div class="x-icon icon"></div>
+            <h2>This verification link is invalid</h2>
+            <app-button [buttonText]="'Request a new link'" (click)="requestNewLinkClicked()"></app-button>
+        </div>
+    </div>
+    <div class="loading-icon" [ngClass]="{'visible': isLoading}"></div>
+</div>
