--- a/shufl-web/src/app/components/group/group-suggestion-details/group-suggestion-details.component.html
+++ b/shufl-web/src/app/components/group/group-suggestion-details/group-suggestion-details.component.html
@@ -1,15 +1,22 @@
 <div class="card-container group-suggestion-details-card-container">
-    <div class="card" [ngClass]="{ 'loaded': dataLoaded }">
-        <div class="group-suggestion-info-container">
+    <div class="card">
+        <app-card-nav-bar></app-card-nav-bar>
+        <div class="group-suggestion-info-container" *ngIf="!isLoading">
             <div class="album-container">
                 <app-album-info [album]="album" [genres]="genres" [linkDisabled]="false"></app-album-info>
             </div>
+
             <div class="overall-rating-container">
-                <app-group-suggestion-rating [rating]="overallRating"></app-group-suggestion-rating>
+                <app-group-suggestion-rating [rating]="overallRating" *ngIf="overallRating != null"></app-group-suggestion-rating>
+            </div>
+
+            <div class="rate-button-container">
+                <app-button [buttonText]="'Rate This'" (click)="rateButtonClicked()"></app-button>
             </div>
         </div>
         <div class="group-ratings-container">
-            <app-group-suggestion-user-rating-list></app-group-suggestion-user-rating-list>
+            <app-group-suggestion-user-rating-list [groupSuggestionRatings]="groupSuggestion.groupSuggestionRatings" *ngIf="groupSuggestion != null && groupSuggestion.groupSuggestionRatings != null"></app-group-suggestion-user-rating-list>
         </div>
     </div>
+    <app-loading-icon *ngIf="isLoading"></app-loading-icon>
 </div>
