--- a/shufl-web/src/app/components/group/group.component.scss
+++ b/shufl-web/src/app/components/group/group.component.scss
@@ -5,6 +5,8 @@
         .group-info-container {
             min-height: 95px;
 
+            position: relative;
+
             .group-info {
                 * {
                     text-align: center;
@@ -32,6 +34,10 @@
                     margin: 5px auto;
 
                     display: block;
+                }
+
+                .action-button-container {
+                    margin-top: 15px;
                 }
 
                 .divider {
