--- a/shufl-web/src/app/components/shared/group/group-suggestion-rating/group-suggestion-rating.component.html
+++ b/shufl-web/src/app/components/shared/group/group-suggestion-rating/group-suggestion-rating.component.html
@@ -1,21 +1,37 @@
 <div class="rating-container" [ngClass]="{'embedded': embedded}">
-    <p class="overall-rating">Overall: {{ rating.overallRating }}/10</p>
+    <p class="overall-rating">
+        Overall: {{ overallRating }}/10
+        <small class="rating-count">({{ instrumentalsRatingsCount }})</small>
+    </p>
+    
     <div class="category-ratings-container">
         <div class="category-rating">
             <p class="rating-title">Lyrics</p>
-            <p class="rating">{{ rating.lyricsRating }}/10</p>
+            <p class="rating">
+                {{ lyricsRating }}/10
+                <small class="rating-count">({{ lyricsRatingsCount }})</small>
+            </p>
         </div>
         <div class="category-rating">
             <p class="rating-title">Vocals</p>
-            <p class="rating">{{ rating.vocalsRating }}/10</p>
+            <p class="rating">
+                {{ vocalsRating }}/10
+                <small class="rating-count">({{ vocalsRatingsCount }})</small>
+            </p>
         </div>
         <div class="category-rating">
             <p class="rating-title">Instrumentals</p>
-            <p class="rating">{{ rating.instrumentalsRating }}/10</p>
+            <p class="rating">
+                {{ instrumentalsRating }}/10
+                <small class="rating-count">({{ instrumentalsRatingsCount }})</small>
+            </p>
         </div>
         <div class="category-rating">
             <p class="rating-title">Composition</p>
-            <p class="rating">{{ rating.compositionRating }}/10</p>
+            <p class="rating">
+                {{ compositionRating }}/10
+                <small class="rating-count">({{ compositionRatingsCount }})</small>
+            </p>
         </div>
     </div>
 </div>
