Setup nullable ratings

--- a/shufl-web/src/app/components/shared/group/group-suggestion-rating/group-suggestion-rating.component.html
+++ b/shufl-web/src/app/components/shared/group/group-suggestion-rating/group-suggestion-rating.component.html
@@ -1,7 +1,7 @@
 <div class="rating-container" [ngClass]="{'embedded': embedded}">
     <p class="overall-rating">
         Overall: {{ overallRating }}/10
-        <small class="rating-count">({{ instrumentalsRatingsCount }})</small>
+        <small class="rating-count">({{ overallRatingsCount }})</small>
     </p>
     
     <div class="category-ratings-container">
