Fixed album info for groups

--- a/shufl-web/src/app/components/shared/album-info/album-info.component.html
+++ b/shufl-web/src/app/components/shared/album-info/album-info.component.html
@@ -11,7 +11,7 @@
         <p *ngFor="let genre of genres" class="genre-label">{{ genre | genreFormatter }}</p>
     </div>
     <p class="release-date">{{ album.releaseDate | date: 'MMMM yyyy' }}</p>
-    <a class="button" href="{{ album.url }}" target="new"><img src="assets/img/logos/spotify-logo.png">
+    <a class="button" href="https://open.spotify.com/album/{{ album.id }}" target="new"><img src="assets/img/logos/spotify-logo.png">
         <p>Open</p>
     </a>
 </div>
