Setup search and adding albums to groups (#17)
* Setup Search Component

* Setup search and adding to group

* Updated debounceTime

* Codacy Fixes

--- a/shufl-web/src/styles.scss
+++ b/shufl-web/src/styles.scss
@@ -7,6 +7,28 @@ html {
     height: 100%;
 }
 
+::-webkit-scrollbar {
+    width: $scrollbar-width;
+
+    border-radius: $scrollbar-border-radius;
+}
+
+::-webkit-scrollbar-track {
+    background: $primary-background-colour;
+
+    border-radius: $scrollbar-border-radius;
+}
+
+::-webkit-scrollbar-thumb {
+    background: $scrollbar-thumb-colour;
+
+    border-radius: $scrollbar-border-radius;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: $scrollbar-thumb-hover-colour;
+}
+
 body {
     height: 100%;
 
