--- a/shufl-web/src/app/components/album/album.component.html
+++ b/shufl-web/src/app/components/album/album.component.html
@@ -1,5 +1,6 @@
 <div class="card-container" [ngClass]="{'modal': isModal}">
     <div class="card" [ngClass]="{'loaded': !isLoading}">
+        <app-card-nav-bar [addVisible]="isLoggedIn" (addClicked)="addClicked()"></app-card-nav-bar>
         <div class="album-info-container">
             <div class="album-cover">
                 <img src="{{ albumCoverArtUrl }}" alt="{{ albumData.name }}">
