--- a/shufl-web/src/assets/scss/variables/colours.scss
+++ b/shufl-web/src/assets/scss/variables/colours.scss
@@ -1,3 +1,6 @@
+$scrollbar-thumb-colour: #8b8d91;
+$scrollbar-thumb-hover-colour: #727171;
+
 $background-gradient-primary-colour: #112d5f;
 $background-gradient-secondary-colour: #8413e0;
 
