fix: added id's to navbar & search input added tcs foor search, nav updates to login spec

--- a/shufl-web/src/app/components/shared/navigation/nav-bar/nav-bar.component.html
+++ b/shufl-web/src/app/components/shared/navigation/nav-bar/nav-bar.component.html
@@ -1,7 +1,7 @@
 <div class="nav-bar">
     <div class="app-icon white"></div>
-    <app-nav-bar-item [itemData]="homeItem" [active]="homeActive"></app-nav-bar-item>
-    <app-nav-bar-item [itemData]="searchItem" [active]="searchActive"></app-nav-bar-item>
-    <app-nav-bar-item [itemData]="groupsItem" [active]="groupsActive"></app-nav-bar-item>
-    <app-nav-bar-item [itemData]="userItem" [active]="userActive"></app-nav-bar-item>
+    <app-nav-bar-item id="homeTab" [itemData]="homeItem" [active]="homeActive"></app-nav-bar-item>
+    <app-nav-bar-item id="searchTab" [itemData]="searchItem" [active]="searchActive"></app-nav-bar-item>
+    <app-nav-bar-item id="groupTab" [itemData]="groupsItem" [active]="groupsActive"></app-nav-bar-item>
+    <app-nav-bar-item id="userTab" [itemData]="userItem" [active]="userActive"></app-nav-bar-item>
 </div>
