--- a/shufl-web/src/app/components/search/search.component.html
+++ b/shufl-web/src/app/components/search/search.component.html
@@ -6,7 +6,7 @@
                     [ngClass]="{'active': searchActive, 'populated': searchPopulated}">
                     <div class="input-container">
                         <label for="search">Search</label>
-                        <input type="text" class="form-control" formControlName="search"
+                        <input id="searchInput" type="text" class="form-control" formControlName="search"
                             (focus)="changeInputState(true)"
                             (blur)="changeInputState(false)">
                         <div class="loading-icon-container" *ngIf="isLoading">
