--- a/shufl-web/src/app/components/artist/artist.component.scss
+++ b/shufl-web/src/app/components/artist/artist.component.scss
@@ -1,5 +1,7 @@
 .card-container {
     .card {
+        min-height: 250px;
+
         .artist-info-container {
             .artist-image {
                 width: fit-content;
