--- a/shufl-web/src/app/components/shared/album-icon/album-icon.component.scss
+++ b/shufl-web/src/app/components/shared/album-icon/album-icon.component.scss
@@ -12,17 +12,17 @@
     }
 
     .album-art {
-        width: 150px;
-        height: 150px;
+        width: 110px;
+        height: 110px;
 
         img {
-            width: 150px;
-            height: 150px;
+            width: 110px;
+            height: 110px;
         }
     }
 
     .album-info {
-        width: calc(100% - 175px);
+        width: calc(100% - 135px);
 
         margin-left: 25px;
 
@@ -70,6 +70,20 @@
             color: $tertiary-foreground-colour;
 
             margin: 0;
+        }
+    }
+}
+
+@media (min-width: 1920px) {
+    .album-icon-container {
+        .album-art {
+            width: 150px;
+            height: 150px;
+
+            img {
+                width: 150px;
+                height: 150px;
+            }
         }
     }
 }
