Setup Toast and added error handling for front end (#21)
* Setup Toast and added error handling for front end

* Update groups-list.component.scss

--- a/shufl-web/src/app/components/groups-list/groups-list.component.scss
+++ b/shufl-web/src/app/components/groups-list/groups-list.component.scss
@@ -30,13 +30,15 @@
         }
 
         .groups-list-container {
-            min-height: 50px;
+            min-height: 75px;
 
             position: relative;
 
-            :last-child {
-                ::ng-deep .groups-list-item-container {
-                    border-bottom: none;
+            .groups-list {
+                :last-child {
+                    ::ng-deep .groups-list-item-container {
+                        border-bottom: none;
+                    }
                 }
             }
 
