--- a/shufl-web/src/app/components/group/group-suggestion-list/group-suggestion-list.component.html
+++ b/shufl-web/src/app/components/group/group-suggestion-list/group-suggestion-list.component.html
@@ -7,5 +7,8 @@
     <div class="no-group-suggestions-message" *ngIf="!isLoading && groupSuggestions?.length === 0">
         <p>No Group Suggestions</p>
     </div>
+    <div class="error-message" *ngIf="!isLoading && groupSuggestions == null">
+        <p>There has been an error processing your request, please try again</p>
+    </div>
     <app-loading-icon *ngIf="isLoading" [dimensions]="75"></app-loading-icon>
 </div>
